--- a/app/src/main/res/layout/activity_game2player.xml
+++ b/app/src/main/res/layout/activity_game2player.xml
@@ -404,5 +404,69 @@
         android:textColor="#000000"/>
 </RelativeLayout>
 
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- Centered GridLayout -->
+        <GridLayout
+            android:id="@+id/drop_zone_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:columnCount="3"
+            android:rowCount="2"
+            android:padding="16dp">
+
+            <!-- Drop Zones -->
+            <FrameLayout
+                android:id="@+id/drop_zone_1"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="#FFCCCB"
+                android:layout_margin="8dp" />
+
+            <FrameLayout
+                android:id="@+id/drop_zone_2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="#FFCCCB"
+                android:layout_margin="8dp" />
+
+            <FrameLayout
+                android:id="@+id/drop_zone_3"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="#FFCCCB"
+                android:layout_margin="8dp" />
+
+            <FrameLayout
+                android:id="@+id/drop_zone_4"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="#FFCCCB"
+                android:layout_margin="8dp" />
+
+            <FrameLayout
+                android:id="@+id/drop_zone_5"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="#FFCCCB"
+                android:layout_margin="8dp" />
+
+            <FrameLayout
+                android:id="@+id/drop_zone_6"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="#FFCCCB"
+                android:layout_margin="8dp" />
+        </GridLayout>
+
+    </RelativeLayout>
+
+
 </RelativeLayout>
 </RelativeLayout>
